Model/GameData JavaDoc and Refactoring.