@@ -1,41 +1,50 @@
 package tr.edu.ku.devnull.needforspear.Model.GameData;
 
-import tr.edu.ku.devnull.needforspear.Model.UIModels.Sphere;
 
-/**
- * OVERVIEW: Speed is a class which contains the value of speed on the x and y
- * axis of an object.
+/*
+
+    This kind of documentation is required by the COMP302 Tasks:
+
+    1) Abstract Functions.
+    2) Representation Invariant.
+    3) RepOK.
+
+    Also, it includes some logic to ability to test the code as requested.
+
+
  */
 
-// This method shows how to create tests for the Class. Thus, we are not creating Handler for it.
-
-// The abstraction function is
-// AF(x) = {x.speedOnXAxis & x.speedOnYAxis | Double.MIN_VALUE <= x.speedOnXAxis, x.speedOnYAxis <= Double.MAX_VALUE}
-
-// The rep invariant is
-// x != null && Double.MIN_VALUE <= x.speedOnXAxis, x.speedOnYAxis <= Double.MAX_VALUE &&
-// x.speedOnXAxis & x.speedOnYAxis should be Double
-
+/**
+ * OVERVIEW: Speed is a class which contains the value of speed on the x and y-axis of an object.
+ * <p>
+ * The abstraction function is
+ * AF(x) = {x.speedOnXAxis & x.speedOnYAxis | Double.MIN_VALUE <= x.speedOnXAxis, x.speedOnYAxis <= Double.MAX_VALUE}
+ * <p>
+ * The rep invariant is
+ * x != null && Double.MIN_VALUE <= x.speedOnXAxis, x.speedOnYAxis <= Double.MAX_VALUE &&
+ * x.speedOnXAxis & x.speedOnYAxis should be Double.
+ */
 public class Speed {
-    private Double speedOnXAxis;
-    private Double speedOnYAxis;
-    private Long xLong;
-    private Long yLong;
+    private double speedOnXAxis;
+    private double speedOnYAxis;
+    private long xLong;
+    private long yLong;
 
     /**
-     * Constructor for Speed.
+     * Constructor for the Speed.
      *
      * @param SpeedOnXAxis Integer value of speed on X-axis.
      * @param SpeedOnYAxis Integer value of speed on Y-axis
      */
 
     public Speed(int SpeedOnXAxis, int SpeedOnYAxis) {
-        this.speedOnXAxis = (double) SpeedOnXAxis;
-        this.speedOnYAxis = (double) SpeedOnYAxis;
+        this.speedOnXAxis = SpeedOnXAxis;
+        this.speedOnYAxis = SpeedOnYAxis;
     }
 
     /**
-     * Constructor for Speed.
+     * Constructor for the Speed.
+     *
      * @param SpeedOnXAxis Double value of speed on X-axis.
      * @param SpeedOnYAxis Double value of speed on Y-axis.
      */
@@ -47,7 +56,7 @@ public class Speed {
     }
 
     /**
-     * Constructor for Speed.
+     * Empty constructor for the database operations.
      */
     public Speed() {
     }
@@ -57,7 +66,7 @@ public class Speed {
      *
      * @return Double value of speed on X-axis.
      */
-    public Double getSpeedOnXAxis() {
+    public double getSpeedOnXAxis() {
         return speedOnXAxis;
     }
 
@@ -66,7 +75,7 @@ public class Speed {
      *
      * @param speedOnXAxis Double value to be set for speed on X-axis.
      */
-    public void setSpeedOnXAxis(Double speedOnXAxis) {
+    public void setSpeedOnXAxis(double speedOnXAxis) {
         this.speedOnXAxis = speedOnXAxis;
     }
 
@@ -75,7 +84,7 @@ public class Speed {
      *
      * @return Double value of speed on Y-axis.
      */
-    public Double getSpeedOnYAxis() {
+    public double getSpeedOnYAxis() {
         return speedOnYAxis;
     }
 
@@ -84,96 +93,92 @@ public class Speed {
      *
      * @param speedOnYAxis Double value to be set for speed on Y-axis.
      */
-    public void setSpeedOnYAxis(Double speedOnYAxis) {
+    public void setSpeedOnYAxis(double speedOnYAxis) {
         this.speedOnYAxis = speedOnYAxis;
     }
 
     /**
-     * Updates the speed according to the given value
-     * @param speed
-     * @return
+     * Updates the speed according to the given value.
+     * <p>
+     * REQUIRES: speed != null.
+     * MODIFIES: None.
+     * EFFECTS: Multiplies the current speed with given speed and adds the x and y values of speeds.
+     *
+     * @param speed Speed to be dotted.
+     * @return Result of the dot operation.
      */
     public double dot(Speed speed) {
-        /*
-         * REQUIRES: speed != null
-         * MODIFIES: none
-         * EFFECTS: Multiplies the current speed with given speed and adds the x and y values of speeds
-         */
-        return speed.getSpeedOnXAxis() * this.getSpeedOnXAxis()+ speed.getSpeedOnYAxis() * this.getSpeedOnYAxis();
+        return speed.getSpeedOnXAxis() * this.getSpeedOnXAxis() + speed.getSpeedOnYAxis() * this.getSpeedOnYAxis();
     }
 
     /**
-     * Substracts the given speed value from current speed value
-     * @param speed
-     * @return Speed
+     * Subtracts the given speed value from current speed value.
+     * <p>
+     * REQUIRES: speed != null.
+     * MODIFIES: None.
+     * EFFECTS: subtracts the current speed from the given speed.
+     *
+     * @param speed Speed to be subtracted.
+     * @return Result of the subtract operation.
      */
     public Speed subtract(Speed speed) {
-        /*
-         * REQUIRES: speed != null
-         * MODIFIES: none
-         * EFFECTS: subtracts the current speed from the given speed
-         */
         return new Speed(
-                new Double(this.getSpeedOnXAxis() - speed.getSpeedOnXAxis()).longValue(),
-                new Double(this.getSpeedOnYAxis() - speed.getSpeedOnYAxis()).longValue());
-
+                Double.valueOf(this.getSpeedOnXAxis() - speed.getSpeedOnXAxis()).longValue(),
+                Double.valueOf(this.getSpeedOnYAxis() - speed.getSpeedOnYAxis()).longValue());
     }
 
     /**
-     * Scales the current speed with the given
-     * @param factor
-     * @return Speed
+     * Scales the current speed with the given.
+     * <p>
+     * REQUIRES: speed != null && factor != null.
+     * MODIFIES: None.
+     * EFFECTS: scales the current speed with the given value.
+     *
+     * @param factor Double value to be applied to the Speed.
+     * @return Scaled Speed value.
      */
-    public Speed scale(double factor){
-        /*
-         * REQUIRES: speed != null && factor != null
-         * MODIFIES: none
-         * EFFECTS: scales the current speed with the given value
-         */
-        return new Speed(new Double(factor * this.getSpeedOnXAxis()).longValue(), new Double(factor*this.getSpeedOnYAxis()).longValue());
+    public Speed scale(double factor) {
+        return new Speed(Double.valueOf(factor * this.getSpeedOnXAxis()).longValue(), Double.valueOf(factor * this.getSpeedOnYAxis()).longValue());
     }
 
     /**
-     * Checks if the speed values are valid
-     * @return boolean
+     * Checks if the speed values are valid.
+     * <p>
+     * REQUIRES: this.
+     * MODIFIES: None.
+     * EFFECTS: returns true if there is no underflow or overflow and object is not null.
+     *
+     * @return Boolean indicates that if the representation is valid.
      */
-    public boolean repOk(){
-        /*
-         * REQUIRES: this
-         * MODIFIES: none
-         * EFFECTS: returns true if there is no underflow or overflow and object is not null
-         */
-        if(this.speedOnXAxis == null || this.speedOnYAxis == null) return false;
-        if(xLong > Double.MAX_VALUE || xLong < Double.MAX_VALUE * -1) return false;
-        if(yLong > Double.MAX_VALUE || yLong < Double.MAX_VALUE * -1) return false;
+    public boolean repOk() {
+        if (xLong > Double.MAX_VALUE || xLong < Double.MAX_VALUE * -1) return false;
+        if (yLong > Double.MAX_VALUE || yLong < Double.MAX_VALUE * -1) return false;
         return true;
     }
 
     /**
-     * Halves the current speed
+     * Halves the current speed.
+     * <p>
+     * REQUIRES: speed != null.
+     * MODIFIES: speedOnXAxis, speedOnYAxis.
+     * EFFECTS: halves the current speed.
      */
-    public void halveSpeed(){
-        /*
-         * REQUIRES: speed != null
-         * MODIFIES: speedOnXAxis, speedOnYAxis
-         * EFFECTS: halves the current speed
-         */
-        setSpeedOnXAxis(getSpeedOnXAxis()/2);
-        setSpeedOnYAxis(getSpeedOnYAxis()/2);
+    public void halveSpeed() {
+        setSpeedOnXAxis(getSpeedOnXAxis() / 2);
+        setSpeedOnYAxis(getSpeedOnYAxis() / 2);
 
     }
 
     /**
-     * Doubles the current speed
+     * Doubles the current speed.
+     * <p>
+     * REQUIRES: speed != null.
+     * MODIFIES: speedOnXAxis, speedOnYAxis.
+     * EFFECTS: doubles the current speed.
      */
-    public void doubleSpeed(){
-         /*
-         * REQUIRES: speed != null
-         * MODIFIES: speedOnXAxis, speedOnYAxis
-         * EFFECTS: doubles the current speed
-         */
-        setSpeedOnXAxis(getSpeedOnXAxis()*2);
-        setSpeedOnYAxis(getSpeedOnYAxis()*2);
+    public void doubleSpeed() {
+        setSpeedOnXAxis(getSpeedOnXAxis() * 2);
+        setSpeedOnYAxis(getSpeedOnYAxis() * 2);
     }
 }
 
